# Neuro-Karaoke-Archive-Metadata

./: .gitignore  README.md  hash_mutagen.py  pyproject.toml
DISC 1 - Humble Beginnings (2023-01-03 - 2023-05-17)/: 001. The Weeknd - Blinding Lights (Neuro.v1).hjson  001. The Weeknd - Blinding Lights (Neuro.v1).json  002. A-ha - Take On Me (Neuro.v1).hjson  002. A-ha - Take On Me (Neuro.v1).json  002. a-ha - Take On Me (Neuro.v1).hjson  003. Coldplay - Viva La Vida (Neuro.v1).hjson  003. Coldplay - Viva La Vida (Neuro.v1).json  004. DECO_27 - ゴーストルール (Ghost Rule) (Neuro.v1).hjson  004. DECO_27 - ゴーストルール (Ghost Rule) (Neuro.v1).json  005. 100 gecs - Money Machine (Neuro.v1).hjson  005. 100 gecs - Money Machine (Neuro.v1).json  005. 100 gecs - money machine (Neuro.v1).hjson  006. Jonathan Coulton, Ellen McLain - Still Alive (Neuro.v1).hjson  006. Jonathan Coulton, Ellen McLain - Still Alive (Neuro.v1).json  007. Porter Robinson - Sad Machine (Neuro.v1).hjson  007. Porter Robinson - Sad Machine (Neuro.v1).json  008. Dan Salvato, Jillian Ashcraft - Your Reality (Neuro.v1).hjson  008. Dan Salvato, Jillian Ashcraft - Your Reality (Neuro.v1).json  009. Rick Astley - Never Gonna Give You Up (short) (Neuro.v1).hjson  009. Rick Astley - Never Gonna Give You Up (short) (Neuro.v1).json  010. Frederic - oddloop (Neuro.v1).hjson  010. Frederic - oddloop (Neuro.v1).json  010. Frederic - オドループ (oddloop) (Neuro.v1).hjson  011. kessoku band - ギターと孤独と蒼い惑星 (Guitar, Loneliness and Blue Planet) (Neuro.v1).hjson  012. Bring Me The Horizon - Can You Feel My Heart (Neuro.v1).hjson  (+104 more)
(+2082 files in other folders)
