[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hjson>=3.1.0",
    "mutagen>=1.47.0",
    "tinytag>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metadata_utils", "src/scripts"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
